--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/atendimentosenha
 spring.datasource.username=root
-spring.datasource.password=teste
+spring.datasource.password=treinamento
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #spring.jpa.hibernate.ddl-auto=update
